--- a/themes/cards/layout/_partial/source/footer.ejs
+++ b/themes/cards/layout/_partial/source/footer.ejs
@@ -19,5 +19,5 @@
             <%- markdown(theme.footer.custom_text[i]) %>
         <% } %>
     <% } %>
-    <p>Powered by <a href="https://hexo.io" target="_blank">Hexo</a> | Theme - <a href="https://github.com/ChrAlpha/hexo-theme-cards" target="_blank">Cards</a></p>
+    <!-- <p>Powered by <a href="https://hexo.io" target="_blank">Hexo</a> | Theme - <a href="https://github.com/ChrAlpha/hexo-theme-cards" target="_blank">Cards</a></p> -->
 </footer>
